--- a/style.css
+++ b/style.css
@@ -3,7 +3,33 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    position: relative;
+    /* background-repeat: no-repeat;
+    
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center; */
+  
+     
+
+
+       
+} 
+
+
 .container{
+    /* display: flex; */
+    /* font-family: "Helvetica Neue", sans-serif; */
+    position: absolute;
+    background-image:url(./img/137c1af9287223828b02529e2b2718a8.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    width:100% ;
+    height: 100%;
+    
     
  
     
@@ -15,16 +41,11 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    margin-top:250px;
+    margin-top:150px;
     
 
 }
-/* body{
-    font-family: "Helvetica Neue", sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
+
 
 #number{
     min-width: 30%;
@@ -39,4 +60,24 @@
     width: 100%;
     border-radius: 100%;
     /* padding-left: 100px; */
+}
+#answer{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    text-align: center; 
+  
+    max-height: 60px; 
+    margin-top: 20px;
+    width: 30%;
+    margin-left:33%;
+    padding-top: 1px;
+    padding-bottom: 1px;
+}
+#gif{
+    /* margin-top: 20px; */
+    width: 10%;
+    margin-left:43%;
+    /* padding-top: 15px; */
+  
 }
