--- a/style.css
+++ b/style.css
@@ -3,15 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    position: relative;
-    /* background-repeat: no-repeat;
+html,body{
+     position: relative;
+    /* background-repeat: no-repeat; */
     
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center; */
+    /* background-size: cover; */
+    /* background-attachment: fixed;
+    background-position: center;
+    background-image:url(./img/137c1af9287223828b02529e2b2718a8.jpg); */ */
   
-     
+  height: 100%;
+
 
 
        
@@ -27,8 +29,13 @@ body{
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
-    width:100% ;
-    height: 100%;
+    
+    height: 900px;
+    width: 1500px;
+    
+    
+    
+    
     
     
  
@@ -41,7 +48,7 @@ body{
     display: flex;
     justify-content: center;
     align-content: center;
-    margin-top:150px;
+    margin-top:250px;
     
 
 }
