--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 html,body{
      position: relative;
+     font-family: inherit;
     /* background-repeat: no-repeat; */
     
     /* background-size: cover; */
@@ -13,6 +14,7 @@ html,body{
     background-image:url(./img/137c1af9287223828b02529e2b2718a8.jpg); */ */
   
   height: 100%;
+ 
 
 
 
@@ -23,6 +25,10 @@ html,body{
 .container{
     /* display: flex; */
     /* font-family: "Helvetica Neue", sans-serif; */
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     background-image:url(./img/137c1af9287223828b02529e2b2718a8.jpg);
     background-repeat: no-repeat;
@@ -32,6 +38,7 @@ html,body{
     
     height: 900px;
     width: 1500px;
+    
     
     
     
@@ -50,22 +57,28 @@ html,body{
     align-content: center;
     margin-top:250px;
     
+    
 
 }
 
 
 #number{
-    min-width: 30%;
+    min-width: 50%;
     height: 40px;
     border-radius: 6px;
     /* padding-left: 20px; */
     text-align: center;
+    font-family: 'Amatic SC', cursive;
+    font-size: 25px;
 }
 #check{
     margin-left: 20px;
     height: 40px;
     width: 100%;
     border-radius: 100%;
+    font-family: 'Amatic SC', cursive;
+    font-size: 25px;
+    background-color:  rgb(0, 255, 221);
     /* padding-left: 100px; */
 }
 #answer{
@@ -73,6 +86,7 @@ html,body{
     justify-content: center;
     align-content: center;
     text-align: center; 
+    position: absolute;
   
     max-height: 60px; 
     margin-top: 20px;
@@ -80,6 +94,7 @@ html,body{
     margin-left:33%;
     padding-top: 1px;
     padding-bottom: 1px;
+    font-family: 'Amatic SC', cursive;
 }
 #gif{
     /* margin-top: 20px; */
@@ -87,4 +102,31 @@ html,body{
     margin-left:43%;
     /* padding-top: 15px; */
   
+}
+#check:hover{
+    opacity: 0.5;
+}
+.name{
+    color:black;
+    font-family: 'Amatic SC', cursive; 
+    margin-top: 100px;
+    background-color:rgb(0, 255, 221); 
+    padding: 5px;
+    border-radius: 5px;
+    
+}
+#final{
+    color: yellow;
+    font-family: 'Amatic SC', cursive;
+    margin-top: 20px;
+    
+
+}
+.game{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    justify-content:space-between;
+    text-align: center;
 }
