--- a/style.css
+++ b/style.css
@@ -1,132 +1,103 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html,body{
-     position: relative;
-     font-family: inherit;
-    /* background-repeat: no-repeat; */
-    
-    /* background-size: cover; */
-    /* background-attachment: fixed;
-    background-position: center;
-    background-image:url(./img/137c1af9287223828b02529e2b2718a8.jpg); */ */
+body {
+  position: relative;
+  font-family: "Amatic SC", cursive;
+  background-image: url(./img/137c1af9287223828b02529e2b2718a8.jpg);
+  background-repeat: no-repeat;
   
-  height: 100%;
- 
+  background-size: cover;
+  background-attachment: fixed;
+  background-position:center;
+  display: flex;
+  
+  justify-content: center;
+  align-items: center;
+  
+  
+  height: 100vh;
+}
 
-
-
-       
-} 
-
-
-.container{
-    /* display: flex; */
-    /* font-family: "Helvetica Neue", sans-serif; */
-    display:flex;
+.container {
+    
+    display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    position: absolute;
-    background-image:url(./img/137c1af9287223828b02529e2b2718a8.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    
-    height: 900px;
-    width: 1500px;
+    justify-content: space-between;
+    height: 70vh;
     
     
-    
-    
-    
-    
-    
- 
     
 }
-    
 
-
-.play{
+.game {
     display: flex;
     justify-content: center;
-    align-content: center;
-    margin-top:250px;
-    
-    
-
+    align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  height: 250px;
+}
+.name {
+  color: black;
+  margin-top: 50px;
+  background:linear-gradient(to right, blueviolet,yellow);
+  padding: 5px;
+  border-radius: 5px;
+}
+#final {
+  color: yellow;
+  margin-top: 20px;
+  /* background-color: blueviolet; */
+  padding: 10px;
+  border-radius: 5px;
 }
 
+.play {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  
+}
 
-#number{
-    min-width: 50%;
-    height: 40px;
-    border-radius: 6px;
-    /* padding-left: 20px; */
+#answer {
+    
     text-align: center;
-    font-family: 'Amatic SC', cursive;
-    font-size: 25px;
+    /* color: orange; */
+    
+    padding: 15px;
+    
 }
-#check{
+#gif {
+  width: 150px;
+  display: none;
+  margin-top: 20px;
+}
+#number {
+  min-width: 50%;
+  height: 40px;
+  border-radius: 6px;
+  /* padding-left: 20px; */
+  text-align: center;
+  outline: none;
+  font-family: "Amatic SC", cursive;
+  
+  font-size: 25px;
+}
+#check {
     margin-left: 20px;
     height: 40px;
     width: 100%;
-    border-radius: 100%;
-    font-family: 'Amatic SC', cursive;
+    border-radius: 10px;
+    font-family: "Amatic SC", cursive;
     font-size: 25px;
-    background-color:  rgb(0, 255, 221);
+    background-color: blueviolet;
     /* padding-left: 100px; */
 }
-#answer{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    text-align: center; 
-    position: absolute;
-  
-    max-height: 60px; 
-    margin-top: 20px;
-    width: 30%;
-    margin-left:33%;
-    padding-top: 1px;
-    padding-bottom: 1px;
-    font-family: 'Amatic SC', cursive;
-}
-#gif{
-    /* margin-top: 20px; */
-    width: 10%;
-    margin-left:43%;
-    /* padding-top: 15px; */
-  
-}
-#check:hover{
-    opacity: 0.5;
-}
-.name{
-    color:black;
-    font-family: 'Amatic SC', cursive; 
-    margin-top: 100px;
-    background-color:rgb(0, 255, 221); 
-    padding: 5px;
-    border-radius: 5px;
-    
-}
-#final{
-    color: yellow;
-    font-family: 'Amatic SC', cursive;
-    margin-top: 20px;
-    
-
-}
-.game{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
-    justify-content:space-between;
-    text-align: center;
+#check:hover {
+  opacity: 0.5;
 }
